--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
-.App {
-  text-align: center;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    font-family: 'font-awesome', sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+    background: #f3b7b7;
+    width: 100%;
+    height: fit-content;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+header{
+    width: 100%;
+    height: 5em;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 5%;
+    align-items: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+header span{
+    font-size: 2em;
+    font-weight: 700;
 }
-
-.App-link {
-  color: #61dafb;
+header span.dot{
+    color: #FF0054;
+    margin-left: 2px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header ul{
+    width: fit-content;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    gap:2em;
+}
+header ul li a{
+    font-size: 1.1em;
+    font-weight: bold;
+    color: rgb(85, 85, 85);
+}
+header ul li a:hover{
+    color: #FF0054;
+}
+header ul li img{
+    width: 1.3em;
+    height: 1.3em;
+}
+@media screen and (max-width: 800px) {
+    header .menu{
+        display: block;
+    }
+    header .menu img{
+        width: 1.8em;
+        height: 1.8em;
+    }
+    header ul:nth-child(2){
+        height: 100%;
+        display: flex;
+        align-items: center;
+        gap:1em;
+    }
+    header .header-list{
+        width: 100%;
+        height: fit-content;
+        position: absolute;
+        top: 5em;
+        left: 0;
+    }
+    header .header-list ul{
+        width: 100%;
+        overflow: hidden;
+        display:block;
+        height: 0;
+        background-color: white;
+        text-align: center;
+        transition: height 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    header .header-list ul li{
+        margin: 1em 0;
+    }
+    header ul li img{
+        width: 1.3em;
+        height: 1.3em;
+    }
 }
