--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,9 @@
     text-decoration: none;
     font-family: 'font-awesome', sans-serif;
 }
+html{
+    scroll-behavior: smooth;
+}
 @keyframes rotate-left {
     from{
         transform: rotate(0deg);
@@ -23,7 +26,7 @@
     }
 }
 body{
-    background: #f3b7b7;
+    /* background: #f3b7b7; */
     width: 100%;
     height: fit-content;
 }
@@ -35,6 +38,9 @@ header{
     justify-content: space-between;
     padding: 0 5%;
     align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 header span{
     font-size: 2em;
@@ -58,10 +64,61 @@ header ul li a{
 }
 header ul li a:hover{
     color: #FF0054;
+    transition: 0.2s ease-in-out;
 }
 header ul li img{
     width: 1.3em;
     height: 1.3em;
+}
+#home{
+    width: 100%;
+    height: fit-content;
+    background-image: url('./images/home-bg.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 16em 0 11em 5em;
+}
+#home div.left-side{
+    width: fit-content;
+    height: fit-content;
+}
+#home div.left-side h1{
+    font-size: 3em;
+    font-weight: 800;
+}
+#home div.left-side span{
+    color: #FF0054;
+    font-size: 1.78em;
+    font-weight: 600;
+    margin-top: 0.5em;
+}
+#home div.left-side p{
+    color: rgb(95, 95, 95);
+    margin-top: 0.5em;
+    font-size: 1.1em;
+    word-spacing: 4px;
+    min-width: 300px;
+    max-width: 480px;
+}
+#home div.left-side button{
+    width: fit-content;
+    height: 3.5em;
+    padding: 0.5em 1.3em;
+    border-radius: 1.75em;
+    margin-top: 1.5em;
+    background-color: #2c2c2c;
+    border: none;
+    cursor: pointer;
+}
+#home div.left-side button:hover{
+    background-color: #FF0054;
+    transition: 0.2s ease-in-out;
+}
+#home div.left-side button a{
+    font-size: 1em;
+    color: white;
+    font-weight: bold;
+    padding: 0.5em 1.5em;
 }
 @media screen and (max-width: 800px) {
     header .menu{
@@ -99,5 +156,24 @@ header ul li img{
     header ul li img{
         width: 1.3em;
         height: 1.3em;
+    }
+    #home{
+        padding: 18em 0 13em 0em;
+    }
+    #home div.left-side{
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+        height: fit-content;
+    }
+    #home div.left-side h1{
+        font-size: 2.3em;
+    }
+    #home div.left-side span{
+        font-size: 1.3em;
+    }
+    #home div.left-side p{
+        font-size: 1em;
+        word-spacing: 4px;
     }
 }
